--- a/TicTacToe_FE/package.json
+++ b/TicTacToe_FE/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
